[package]
name = "json-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2"

elliptic-curve = { version = "0.13", features = ["hash2curve"] }
p256 = { version = "0.13", features = ["hash2curve"] }

sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-recursion = "1.1.1"
